# handlers/requests.go
@@ -1,7 +1,7 @@
 package handlers
 
 type UpsertCartItemRequest struct {
-	Quantity int `json:"quantity"`
+	Quantity int `json:"quantity" validate:"required,gt=0"`
 }
 
 type CreateOrderRequest struct {
@@ -18,4 +18,12 @@ type LineItemRequest struct {
 type AuthRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
+}
+
+type CreateCartRequest struct {
+	UserID int `json:"user_id" validate:"required,gt=0"`
+	Items  []struct {
+		ItemID   int `json:"item_id" validate:"required,gt=0"`
+		Quantity int `json:"quantity" validate:"required,gt=0"`
+	} `json:"items" validate:"required,min=1,dive"`
 }
